# dna-profiler

./: CMakeLists.txt  README.md
src/: CSIManager.cpp  main.cpp
src/lib/: Color.h
src/model/: DNADatabase.h  Profiler.h
